[package]
name = "haystack"
version = "0.4.3"
authors = ["Dominik Braun <braun@sternentstehung.de>", "Johannes Hörmann <aligator@suncraft-server.de>"]
edition = "2018"
build = "build.rs"

[dependencies]
walkdir = "2"
clap = "2.33.0"
crossbeam = "0.7"
structopt = "0.2.18"

[features]
release_max_level_info = []
max_level_off = []